[gd_scene load_steps=3 format=3 uid="uid://f83mqw1l7iv"]

[ext_resource type="Texture2D" uid="uid://bihviwqlsm5s4" path="res://Graphics/saw blade sprite sheet.png" id="1_e2ox3"]
[ext_resource type="Script" path="res://Player/GooglyEyes.gd" id="1_mbj24"]

[node name="googly_eyes" type="Node2D"]
z_index = 31
z_as_relative = false
script = ExtResource("1_mbj24")

[node name="left_eye_shape" type="Polygon2D" parent="."]
position = Vector2(-157, -52)
texture = ExtResource("1_e2ox3")
polygon = PackedVector2Array(133.783, 32.5024, 125.342, 41.3337, 125.277, 61.7887, 132.03, 68.6395, 137.517, 71.1395, 143.426, 71.0746, 151.901, 65.9771, 153.427, 60.977, 153.719, 41.6259, 148.881, 34.3855, 142.712, 31.2686)
uv = PackedVector2Array(133.783, 32.5024, 125.342, 41.3337, 125.277, 61.7887, 132.03, 68.6395, 137.517, 71.1395, 143.426, 71.0746, 151.673, 65.7498, 154.173, 58.8016, 154.271, 43.1195, 148.881, 34.3855, 142.712, 31.2686)

[node name="left_pupil_shape" type="Polygon2D" parent="left_eye_shape"]
position = Vector2(-0.763462, -26.6388)
texture = ExtResource("1_e2ox3")
polygon = PackedVector2Array(138.51, 97.5058, 133.498, 93.3588, 132.323, 90.5646, 133.143, 86.3511, 135.428, 81.6276, 138.066, 80.3192, 142.48, 80.4079, 145.584, 82.0933, 147.624, 85.4197, 148.378, 88.9014, 148.268, 93.0483, 145.163, 96.3526, 142.324, 97.5501)
uv = PackedVector2Array(138.51, 97.5058, 133.498, 93.3588, 132.323, 90.5646, 133.143, 86.3511, 135.428, 81.6276, 138.066, 80.3192, 142.48, 80.4079, 145.584, 82.0933, 147.624, 85.4197, 148.378, 88.9014, 148.268, 93.0483, 145.163, 96.3526, 142.324, 97.5501)

[node name="right_eye_shape" type="Polygon2D" parent="."]
position = Vector2(-152, -52)
texture = ExtResource("1_e2ox3")
polygon = PackedVector2Array(172.768, 32.5432, 165.422, 32.8968, 158.704, 38.6719, 156.15, 45.3899, 155.168, 57.883, 156.543, 62.9509, 162.907, 68.7653, 170.411, 70.1796, 177.758, 68.1367, 183.14, 59.6509, 182.786, 44.4077, 180.193, 36.0397, 177.09, 32.386)
uv = PackedVector2Array(172.768, 32.5432, 165.422, 32.8968, 158.704, 38.6719, 156.15, 45.3899, 155.168, 57.883, 156.543, 62.9509, 162.907, 68.7653, 170.411, 70.1796, 177.758, 68.1367, 183.14, 59.6509, 182.786, 44.4077, 180.193, 36.0397, 177.09, 32.386)

[node name="right_pupil_shape" type="Polygon2D" parent="right_eye_shape"]
position = Vector2(-1.77134, -26.5721)
texture = ExtResource("1_e2ox3")
polygon = PackedVector2Array(163.059, 92.7963, 165.936, 95.3071, 171.233, 96.2052, 174.349, 95.9486, 177.336, 93.4561, 178.198, 88.471, 177.721, 83.7059, 173.762, 80.2786, 168.521, 80.2237, 166.12, 80.4619, 164.342, 82.313, 162.564, 85.5753, 161.813, 88.2327)
uv = PackedVector2Array(163.059, 92.7963, 165.936, 95.3071, 171.233, 96.2052, 174.349, 95.9486, 177.336, 93.4561, 178.198, 88.471, 177.721, 83.7059, 173.762, 80.2786, 168.521, 80.2237, 166.12, 80.4619, 164.342, 82.313, 162.564, 85.5753, 161.813, 88.2327)
